fix: form scrollbar styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -87,7 +87,7 @@ a {
 form {
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
+  overflow-y: auto;
   margin: 3rem 10%;
   max-height: 80vh;
   width: 80%;
